Fixed right alignment for display style

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   padding: 2rem;
   box-sizing: border-box;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .panel-button {
